fix java11 freeDirectBuffer